--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.29.25",
     "@tanstack/react-query-devtools": "^4.29.25",
-    "@trpc/client": "10.45.1",
-    "@trpc/next": "10.45.1",
-    "@trpc/react-query": "10.45.1",
-    "@trpc/server": "10.45.1",
+    "@trpc/client": "^10.45.3",
+    "@trpc/next": "^10.45.3",
+    "@trpc/react-query": "^10.45.3",
+    "@trpc/server": "^10.45.3",
     "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "clsx": "^2.0.0",
@@ -93,7 +93,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "lint-staged": "^13.2.3",
+    "lint-staged": "^15.2.5",
     "npm-run-all2": "^5.0.0",
     "postcss": "^8.4.26",
     "prettier": "3.2.5",
@@ -101,7 +101,10 @@
     "prisma": "^5.0.0",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
-    "tsx": "^3.12.7",
+    "tsx": "^4.21.0",
     "typescript": "5.3.3"
+  },
+  "overrides": {
+    "glob": "10.5.0"
   }
 }
