--- a/package.json
+++ b/package.json
@@ -20,13 +20,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "prisma-studio": "prisma studio",
-    "prisma-generate": "prisma generate",
-    "db-seed": "prisma db seed",
-    "db-reset": "prisma migrate reset",
-    "build": "run-s prisma-generate migrate && next build",
-    "migrate-dev": "prisma migrate dev",
-    "migrate": "prisma migrate deploy",
+    "build": "next build",
     "test": "run-s test:*",
     "test:unit": "jest --passWithNoTests",
     "test:e2e": "cypress run",
@@ -34,13 +28,9 @@
     "test-prod": "start-server-and-test start http://127.0.0.1:3000 test",
     "prepare": "husky install"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
+  
   "dependencies": {
     "@headlessui/react": "^1.7.15",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.0.0",
     "@tanstack/react-query": "^4.29.25",
     "@tanstack/react-query-devtools": "^4.29.25",
     "@trpc/client": "^10.45.3",
@@ -98,7 +88,6 @@
     "postcss": "^8.4.26",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.0",
-    "prisma": "^5.0.0",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "tsx": "^4.21.0",
